# sql-para-analistas-de-dados

./: genindex.html  index.html  objects.inv  pyproject.toml  search.html  searchindex.js
_sources/content/01/: introduction.ipynb
book/: _config.yml  _toc.yml
book/_build/.doctrees/: environment.pickle  index.doctree
book/_build/.doctrees/content/: introduction.doctree
book/_build/.doctrees/content/01/: introduction.doctree
book/_build/.doctrees/content/02/: relationship.doctree
book/_build/.doctrees/content/03/: sql.doctree
book/_build/html/: .buildinfo  genindex.html  index.html  objects.inv  search.html  searchindex.js
book/_build/html/_sources/content/01/: introduction.ipynb
book/_build/html/_sources/content/02/: relationship.ipynb
book/_build/html/_sources/content/03/: sql.ipynb
book/_build/html/content/: introduction.html
book/_build/html/content/01/: introduction.html
book/_build/html/content/02/: relationship.html
book/_build/html/content/03/: sql.html
book/_build/jupyter_execute/content/01/: introduction.ipynb
book/_build/jupyter_execute/content/02/: relationship.ipynb
book/_build/jupyter_execute/content/03/: sql.ipynb
book/content/02/: relationship.ipynb  schema_ecom.dmm
book/content/03/: sql.ipynb
